// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> redirects correctly when authenticated to referrer if given 1`] = `"<div><p>You are now at my path</p></div>"`;

exports[`<LoginForm /> redirects correctly when authenticated to root path if no referrer is given 1`] = `"<div><p>Welcome to the home page!</p></div>"`;

exports[`<LoginForm /> renders correctly with error state 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-xs-12 col-sm-8 col-lg-4"
    >
      <form
        className="my-4"
      >
        <div
          className="paragon-fieldset"
        >
          <fieldset
            aria-describedby="error-fieldset8"
            className="form-control p-3 is-invalid"
          >
            <legend
              className="p-1"
            >
              <p
                className="text-secondary"
              >
                Log in
              </p>
            </legend>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput9"
                id="label-asInput9"
              >
                Email
              </label>
              <input
                aria-describedby="error-asInput9"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput9"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput9"
              >
                <span />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput10"
                id="label-asInput10"
              >
                Password
              </label>
              <input
                aria-describedby="error-asInput10"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput10"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="password"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput10"
              >
                <span />
              </div>
            </div>
            <div
              className="form-addons"
            >
              <div
                className="row"
              >
                <div
                  className="col-3"
                >
                  <button
                    className="btn btn-primary"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    Sign In
                  </button>
                </div>
                <div
                  className="ml-2"
                />
              </div>
            </div>
          </fieldset>
          <div
            aria-live="polite"
            className="invalid-feedback"
            id="error-fieldset8"
          >
            <span
              aria-hidden={true}
              className="fa fa-exclamation-circle fa-icon-spacing"
            />
            <span
              className="sr-only"
            >
              Error
            </span>
            Invalid username and/or password
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<LoginForm /> renders correctly with inital (non loading) state 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-xs-12 col-sm-8 col-lg-4"
    >
      <form
        className="my-4"
      >
        <div
          className="paragon-fieldset"
        >
          <fieldset
            aria-describedby="error-fieldset2"
            className="form-control p-3"
          >
            <legend
              className="p-1"
            >
              <p
                className="text-secondary"
              >
                Log in
              </p>
            </legend>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput3"
                id="label-asInput3"
              >
                Email
              </label>
              <input
                aria-describedby="error-asInput3"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput3"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput3"
              >
                <span />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput4"
                id="label-asInput4"
              >
                Password
              </label>
              <input
                aria-describedby="error-asInput4"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput4"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="password"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput4"
              >
                <span />
              </div>
            </div>
            <div
              className="form-addons"
            >
              <div
                className="row"
              >
                <div
                  className="col-3"
                >
                  <button
                    className="btn btn-primary"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    Sign In
                  </button>
                </div>
                <div
                  className="ml-2"
                />
              </div>
            </div>
          </fieldset>
          <div
            aria-live="polite"
            className="invalid-feedback"
            id="error-fieldset2"
          >
            <span />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<LoginForm /> renders correctly with loading state 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-xs-12 col-sm-8 col-lg-4"
    >
      <form
        className="my-4"
      >
        <div
          className="paragon-fieldset"
        >
          <fieldset
            aria-describedby="error-fieldset5"
            className="form-control p-3"
          >
            <legend
              className="p-1"
            >
              <p
                className="text-secondary"
              >
                Log in
              </p>
            </legend>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput6"
                id="label-asInput6"
              >
                Email
              </label>
              <input
                aria-describedby="error-asInput6"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput6"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput6"
              >
                <span />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className=""
                htmlFor="asInput7"
                id="label-asInput7"
              >
                Password
              </label>
              <input
                aria-describedby="error-asInput7"
                aria-invalid={false}
                autoComplete="on"
                className="form-control is-invalid-nodanger"
                disabled={false}
                id="asInput7"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder={undefined}
                readOnly={false}
                required={false}
                themes={Array []}
                type="password"
                value=""
              />
              <div
                aria-live="polite"
                className="invalid-feedback invalid-feedback-nodanger"
                id="error-asInput7"
              >
                <span />
              </div>
            </div>
            <div
              className="form-addons"
            >
              <div
                className="row"
              >
                <div
                  className="col-3"
                >
                  <button
                    className="btn btn-primary"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    Sign In
                  </button>
                </div>
                <div
                  className="ml-2"
                >
                  <div
                    className="css-17505b1"
                  >
                    <div
                      className="css-duce4u"
                    />
                    <div
                      className="css-1royeff"
                    />
                    <div
                      className="css-j2bh3q"
                    />
                    <div
                      className="css-1wqkugw"
                    />
                    <div
                      className="css-1uul38"
                    />
                    <div
                      className="css-97c5uk"
                    />
                    <div
                      className="css-1cxrb5j"
                    />
                    <div
                      className="css-15vkas8"
                    />
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <div
            aria-live="polite"
            className="invalid-feedback"
            id="error-fieldset5"
          >
            <span />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
